lab_terraform/2containers/helm/k8s-deployment.yaml
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuln-app
  labels:
    app: vuln-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vuln-app
  template:
    metadata:
      labels:
        app: vuln-app
    spec:
      containers:
      - name: vuln-app
        image: <your-image-repository>/vuln-app:<your-image-tag>
        ports:
        - containerPort: 8080
