lab_terraform/2containers/helm/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuln-app-svc
spec:
  type: LoadBalancer
  selector:
    app: vuln-app
  ports:
  - port: 80
    targetPort: 8080
